# proyecto-progra-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Menus/: menus.cpp  menus.h
ProyectoFinal/: Administrador.h  CMakeLists.txt  Candidato.h  Elector.h  Entidades.h  Menus.h  ProyectoFinal.cpp  ProyectoFinal.h  Votos.h  ache.cpp  main.cpp
ProyectoFinal/Archivos/: candidatos.txt
ProyectoFinal/Archivos/candidatos/: listado.txt
ProyectoFinal/Menus/: main.h  menuAdmin.h  menuElector.h  menuPrincipal.h  menuReportes.h
